@@ -7,9 +7,8 @@ Isaiah, Satin, Snehal, Raghu
 todo
 
  The Project is a Maven Project. 
-1. Open the Project in Maven
-2. Right click on App.java file --> Run Configurations --> Add Arguments "--module-path "JavaFX-Path" --add-modules javafx.controls,javafx.fxml
-3. Run 
+1. Import Existing Maven Project in Eclipse (make sure you have Maven configured)
+3. Run App.java as Java Application 
 
 Confluence Link for Design :
 https://uisapp2.iu.edu/confluence-prd/display/ESSWAT/Group+3+Week+4+Design
